header and video

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,6 +2,7 @@
 :root {
   --color-white: #ffffff;
   --color-black: #181818;
+  --color-grey: #d9d9d9;
 
   --primary-first: #f7823e;
   --primary-second: #cd5d47;
@@ -26,4 +27,15 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-black);
+}
+
+.button {
+  display: flex;
+  width: 104px;
+  height: 41px;
+  background-color: var(--color-grey);
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
 }
