--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -11,6 +11,9 @@
   --section-width-l: 1200px;
   --section-width-m: 900px;
   --section-width-s: 600px;
+
+  --shadow-1: rgba(255, 255, 255, 0.1) 0px 20px 25px -5px,
+    rgba(255, 255, 255, 0.04) 0px 10px 10px -5px;
 }
 
 @media (prefers-color-scheme: dark) {
