--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -14,23 +14,32 @@
 
   --shadow-1: rgba(255, 255, 255, 0.1) 0px 20px 25px -5px,
     rgba(255, 255, 255, 0.04) 0px 10px 10px -5px;
+
+  --gradient-1: linear-gradient(136deg, #f7823e 0%, #8b484e 100%);
 }
 
 :root.light-theme {
-  --color-white: #ffffff;
-  --color-black: #ffffff;
-  --color-grey: #d9d9d9;
+  --color-white: #181818;
+  --color-black: #e3e0ee;
+  --color-grey: #c1bfbf;
 
-  --primary-first: #f7823e;
-  --primary-second: #cd5d47;
-  --primary-third: #8b484e;
+  --primary-first: #f9d0a8;
+  --primary-second: #e7a7a3;
+  --primary-third: #ffb9ab;
 
   --section-width-l: 1200px;
   --section-width-m: 900px;
   --section-width-s: 600px;
 
-  --shadow-1: rgba(255, 255, 255, 0.1) 0px 20px 25px -5px,
-    rgba(255, 255, 255, 0.04) 0px 10px 10px -5px;
+  --shadow-1: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+
+  --gradient-1: linear-gradient(
+    136deg,
+    #f9d0a8 0%,
+    #ecb3a4 70.31%,
+    #e7a7a3 100%
+  );
 }
 
 @media (prefers-color-scheme: dark) {
